--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,12 @@
     "php": ">=5.6.4",
     "cartalyst/sentinel": "2.0.*",
     "dimsav/laravel-translatable": "^7.0",
+    "guzzlehttp/guzzle": "^6.3",
+    "laravel/cashier-braintree": "~2.0",
     "laravel/framework": "5.4.*",
     "laravel/tinker": "~1.0",
     "laravelcollective/html": "^5.4",
-    "mcamara/laravel-localization": "^1.2",
-    "laravel/cashier-braintree":"~2.0"
+    "mcamara/laravel-localization": "^1.2"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
