--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "php": ">=5.6.4",
     "cartalyst/sentinel": "2.0.*",
     "dimsav/laravel-translatable": "^7.0",
+    "dompdf/dompdf": "^0.8.0",
     "guzzlehttp/guzzle": "^6.3",
     "laravel/cashier-braintree": "~2.0",
     "laravel/framework": "5.4.*",
