--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": ">=5.6.4",
     "cartalyst/sentinel": "2.0.*",
+    "cmgmyr/messenger": "^2.14",
     "dimsav/laravel-translatable": "^7.0",
     "doctrine/dbal": "^2.6",
     "dompdf/dompdf": "^0.8.0",
