--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     ],
     "psr-4": {
       "App\\": "app/"
-    }
+    },
+    "files": ["app/Http/helpers.php"]
   },
   "autoload-dev": {
     "psr-4": {
